--- a/app.json
+++ b/app.json
@@ -1,19 +1,19 @@
 {
-  "name": "Strapi",
-  "description": "Strapi Starter blog",
-  "keywords": ["strapi", "heroku", "starter", "blog"],
-  "repository": "https://github.com/strapi/strapi-starter-blog",
+  "name": "Strapi Backend",
+  "description": "Strapi Backend",
+  "keywords": ["strapi", "heroku"],
+  "repository": "https://github.com/rd-rauf/heroku-strapi",
   "env": {
     "CLOUDINARY_CLOUD_NAME": {
-      "description": "The 'Cloud name' of your Cloudinary account",
+      "description": "abdulrauf",
       "required": true
     },
     "CLOUDINARY_API_KEY": {
-      "description": "The 'API Key' of your Cloudinary account",
+      "description": "532274146967739",
       "required": true
     },
     "CLOUDINARY_API_SECRET": {
-      "description": "The 'API Secret' of your Cloudinary account",
+      "description": "D5y_UV0ZAX5QYu72lhaJ0YjjHV0",
       "required": true
     }
   },
